[package]
name = "eroteme"
version = "1.0.0"
authors = ["Matt Cook <hello@mattcook.dev>"] 
edition = "2021"
description = "Q&A API"
readme = "README.md"
repository = "https://github.com/sciencefidelity/eroteme"
license = "MIT or Apache-2.0"
exclude = ["./scripts"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.7", features = ["derive"] }
dotenv = "0.15.0"
handle-errors = { path = "handle-errors" }
openssl = { version = "0.10.32", features = ["vendored"] }
paseto = "2.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
rust-argon2 = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "migrate", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"

[build-dependencies]
platforms = "2.0.0"
