[package]
name = "integration-tests"
version = "1.0.0"
authors = ["Matt Cook <hello@mattcook.dev>"] 
edition = "2021"
license = "MIT or Apache-2.0"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
dotenv = "0.15.0"
eroteme = { path = "../" }
futures-util = "0.3"
handle-errors = { path = "../handle-errors" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

