[package]
name = "mock-server"
version = "1.0.0"
authors = ["Matt Cook <hello@mattcook.dev>"] 
edition = "2021"
repository = "https://github.com/sciencefidelity/eroteme/mock-server"
license = "MIT or Apache-2.0"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
bytes = "1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

