[package]
name = "handle-errors"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = "0.12"
reqwest-middleware = "0.3"
rust-argon2 = "2.1"
sqlx = { version = "0.7", features = ["postgres"] }
tracing = { version = "0.1", features = ["log"] }
warp = "0.3"
